Muestro imagen por defecto

--- a/PEC6_Ej_Prac/stock-market/angular.json
+++ b/PEC6_Ej_Prac/stock-market/angular.json
@@ -4,6 +4,9 @@
   "newProjectRoot": "projects",
   "projects": {
     "stock-market": {
+      "i18n": {
+        "sourceLocale": "es-ES"
+      },
       "projectType": "application",
       "schematics": {},
       "root": "",
